--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.5.3",
+    "react-router-dom": "^7.6.0",
     "react-step-wizard": "^5.3.11",
     "tailwindcss": "^4.1.5"
   },
