--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
-MONGODB_URI='mongodb+srv://profile:profile1234@cluster0.ebmyiyb.mongodb.net'
-JWT_SECRET='uK7$wE!cTz93Lp#xFv@1gQh^NM2aYdXs'
-NODE_ENV='development'
-VITE_API_URL='http://localhost:3001'
-CLIENT_URL='https://profile-page-git-main-itsmassos-projects.vercel.app/'
+MONGODB_URI=mongodb+srv://profile:profile1234@cluster0.ebmyiyb.mongodb.net
+JWT_SECRET=uK7$wE!cTz93Lp#xFv@1gQh^NM2aYdXs
+NODE_ENV=development
+VITE_API_URL=http://localhost:3001
+CLIENT_URL=https://profile-page-git-main-itsmassos-projects.vercel.app/
