--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
 MONGODB_URI=mongodb+srv://profile:profile1234@cluster0.ebmyiyb.mongodb.net
 JWT_SECRET=uK7$wE!cTz93Lp#xFv@1gQh^NM2aYdXs
 NODE_ENV=development
-CLIENT_URL=https://profile-page-hzu99omsb-itsmassos-projects.vercel.app
+CLIENT_URL=https://profile-page-wine.vercel.app
